kubernetes-networks/canary/01-web-canary-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-canary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web-canary
  labels:
    key: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: avtandilko/web:1.0
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
          - name: app
            mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web-canary
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
